<resources>
    <string name="app_name">AeroJump</string>
    <string name="highscore">0</string>
    <string name="activity_main_header">AeroJump</string>
    <string name="activity_info_header">How To Play</string>
    <string name="activity_highscores_header">Highscores</string>
    <string name="activity_enter_highscore_submit">Submit</string>
    <string name="new_player">Player Name:</string>
    <string name="activity_highscores_names">Name</string>
    <string name="activity_highscores_scores">Highscore</string>
    <string name="settings_enable_sound">Enable Sound</string>
    <string name="settings_control">Control</string>
    <string name="settings_control_a">Left Up - Right Down</string>
    <string name="settings_control_b">Left Down - Right Up</string>
    <string name="activity_highscores_lastplayed">0</string>
    <string name="activity_highscores_last_header">Last Played</string>
</resources>
